Listing the account and candidate in UI

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                 </tbody>
             </table>
             <hr>
-            <p id="accountAddress" class="text-center"> </p>
+            <p id="accountAddress" class="text-center">Let Check </p>
           </div>
         </div>
       </div>
