--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <hr/>
           <br/>
           <div id="loader"> 
-            <p class="text-center">Loading ....</p>
+            <!-- <p class="text-center">Loading ....</p> -->
           </div>
           <div id="content" >
             <table class="table">
@@ -42,6 +42,20 @@
             <hr>
             <p id="accountAddress" class="text-center">Let Check </p>
           </div>
+
+
+          <div class="text-center"> 
+            <form >
+                <select class="form-control" id="selectCandidate">
+                    <option selected>Choose Candidate</option>
+                  </select>
+            <br>
+            <br>
+            <button type="button" onclick="App.castVote()" class="btn btn-primary btn-block">Vote</button>
+          </form>
+          </div>
+
+
         </div>
       </div>
 
