--- a/src/index.html
+++ b/src/index.html
@@ -44,14 +44,14 @@
           </div>
 
 
-          <div class="text-center"> 
-            <form >
+          <div class="text-center" id="voteDiv"> 
+            <form id="voteForm">
                 <select class="form-control" id="selectCandidate">
                     <option selected>Choose Candidate</option>
                   </select>
             <br>
             <br>
-            <button type="button" onclick="App.castVote()" class="btn btn-primary btn-block">Vote</button>
+            <button type="button" onclick="App.castVote()" class="btn btn-primary btn-block" id="voteButton">Vote</button>
           </form>
           </div>
 
